# OpenCV_FaceRecognition

./: Face Recognition.ipynb  Face Recognition.py  README.md  live-face-recognition.py  pyproject.toml
